fix rotate effect bug

--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
             animateType: 'default',
             isAutoplay: true,
             isLooping: true,
+            // isVertical: true,
         });
 
         //vertical slide
