improve offical page

--- a/index_en.html
+++ b/index_en.html
@@ -55,7 +55,9 @@
 </div>
 
 <h4 style="text-align: center">Animation Effect</h4>
-<div id="animation-effect" class="iSlider-effect"></div>
+<div id="iSlider-effect-wrapper">
+    <div id="animation-effect" class="iSlider-effect"></div>
+</div>
 <div id="menu-select">
     <span class="on">default</span>
     <span>rotate</span>
