--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 </div>
 
 <h4 style="text-align: center">动画效果</h4>
-<div id="animation-effect" class="iSlider-effect"></div>
+<div id="iSlider-effect-wrapper">
+    <div id="animation-effect" class="iSlider-effect"></div>
+</div>
 <div id="menu-select">
     <span class="on">default</span>
     <span>rotate</span>
