fix overspread bug

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -86,6 +86,7 @@
 			];
 				
 		var	islider = new iSlider({
+			type: 'overspread',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isVertical: true,
