--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -48,6 +48,7 @@
 	<!-- Outer Canvas 外层画布 -->
 	<div id="iSlider-wrapper"></div>
 	<script src="../public/js/islider.js"></script>
+	<script src="../public/js/islider_desktop.js"></script>
 	<script>
 		var list = [
 			{
@@ -86,15 +87,15 @@
 			];
 				
 		var	islider = new iSlider({
-			type: 'overspread',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isVertical: true,
 		    isLooping: false,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'rotate'
+		    animateType: 'default'
 		});
+		islider.bindMouse();
 
 	</script>
 </body>
