fix tear animation

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -91,7 +91,7 @@
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isVertical: true,
-		    isLooping: false,
+		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
 		    animateType: 'tear'
