--- a/demo/dom/index.html
+++ b/demo/dom/index.html
@@ -87,6 +87,7 @@
 	</div>
 </div>
 	<script type="text/javascript" src="../public/js/islider.js"></script>
+	<script src="../public/js/islider_desktop.js"></script>
 	<script>
 		var list = [
 		{
@@ -125,6 +126,7 @@
 		   		document.getElementById('iSlider-nav').children[0].innerText = info[idx];
 		   	}
 		});
+		islider.bindMouse();
 	</script>
 </body>
 </html>
