add desktop support for gh-pages

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,7 @@
 	
 
 	<script type="text/javascript" src="src/islider.js"></script>
+	<script type="text/javascript" src="src/plugins/islider_desktop.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 
 </body>
