add desktop depence

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -48,7 +48,7 @@
 	<!-- Outer Canvas 外层画布 -->
 	<div id="iSlider-wrapper"></div>
 	<script src="../public/js/islider.js"></script>
-	<script src="../public/js/islider_desktop.js"></script>
+
 	<script>
 		var list = [
 			{
@@ -104,7 +104,7 @@
 		    isAutoplay: false,
 		    animateType: 'tear'
 		});
-		islider.bindMouse();
+		//islider.bindMouse();
 
 	</script>
 </body>
