--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -99,11 +99,11 @@
 			type: 'overspread',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
-		    isVertical: true,
+		    isVertical: false,
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'tear'
+		    animateType: 'default'
 		});
 		islider.renderIndex();
 		islider.onslideend = islider.changeIndex;
