improve image loader

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -52,49 +52,49 @@
 	<script>
 		var list = [
 			{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content: "http://leehey.org/iSlider/demo/public/imgs/1.jpg",
 				content: "http://leehey.org/iSlider/demo/public/big/1.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content: "http://leehey.org/iSlider/demo/public/imgs/2.jpg",
 				content: "http://leehey.org/iSlider/demo/public/big/2.jpg"
 			},{
-			 	height: 414,
-				width: 300,
+			 // 	height: 414,
+				// width: 300,
 			 	// content: "http://leehey.org/iSlider/demo/public/imgs/3.jpg",
 			 	content: "http://leehey.org/iSlider/demo/public/big/3.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/4.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/4.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/5.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/5.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/6.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/6.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/7.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/7.jpg"
 			},{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/8.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/8.jpg"
 			},
 			{
-				height: 414,
-				width: 300,
+				// height: 414,
+				// width: 300,
 				// content:"http://leehey.org/iSlider/demo/public/imgs/9.jpg"
 				content: "http://leehey.org/iSlider/demo/public/big/9.jpg"
 			},
@@ -106,7 +106,7 @@
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isVertical: true,
 		    isLooping: true,
-		    isDebug: true,
+		    // isDebug: true,
 		    isAutoplay: false,
 		    animateType: 'tear'
 		});
