improve image loader

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -106,7 +106,7 @@
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isVertical: true,
 		    isLooping: true,
-		    // isDebug: true,
+		    isDebug: true,
 		    isAutoplay: false,
 		    animateType: 'tear'
 		});
