--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -104,7 +104,7 @@
 			type: 'pic',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
-		    isVertical: false,
+		    isVertical: true,
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
