--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -101,14 +101,14 @@
 			];
 				
 		var	islider = new iSlider({
-			type: 'pic',
+			type: 'overspread',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
-		    isVertical: true,
+		    isVertical: false,
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'default'
+		    animateType: 'flip'
 		});
 
 	</script>
