--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -104,11 +104,11 @@
 			type: 'overspread',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
-		    isVertical: false,
+		    isVertical: true,
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'flip'
+		    animateType: 'rotate'
 		});
 
 	</script>
