--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -108,7 +108,7 @@
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'default'
+		    animateType: 'tear'
 		});
 
 	</script>
