imageloader support isOverspread == true

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -108,7 +108,7 @@
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'depth'
+		    animateType: 'rotate'
 		});
 
 	</script>
