--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -100,6 +100,17 @@
 			},
 			];
 				
+		// var	islider = new iSlider({
+		// 	type: 'pic',
+		//     data: list,
+		//     dom: document.getElementById("iSlider-wrapper"),
+		//     isVertical: false,
+		//     isLooping: true,
+		//     isDebug: true,
+		//     isAutoplay: false,
+		//     animateType: 'rotate'
+		// });
+
 		var	islider = new iSlider({
 			type: 'pic',
 		    data: list,
@@ -108,7 +119,7 @@
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'rotate'
+		    animateType: 'depth'
 		});
 
 	</script>
