add flow animation

--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -119,7 +119,7 @@
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
-		    animateType: 'depth'
+		    animateType: 'flow'
 		});
 
 	</script>
