iprove official page

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <tr>
         <td>animateType</td>
         <td>String</td>
-        <td>目前支持default, rotate, flip 和 depth</td>
+        <td>目前支持default, rotate, flip, depth, flow 和 card</td>
     </tr>
     <tr>
         <td>onslide</td>
