--- a/index_en.html
+++ b/index_en.html
@@ -212,7 +212,7 @@
     <tr>
         <td>animateType</td>
         <td>String</td>
-        <td>Currently, default, rotate, flip and depth are supported animations</td>
+        <td>Currently, default, rotate, flip, depth, flow and card are supported animations</td>
     </tr>
     <tr>
         <td>onslide</td>
