--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -104,11 +104,9 @@
 			type: 'pic',
 		    data: list,
 		    dom: document.getElementById("iSlider-wrapper"),
-		    isVertical: false,
 		    isLooping: true,
-		    isDebug: true,
-		    isAutoplay: false,
-		    animateType: 'flow'
+		    isOverspread: true,
+		    animateType: 'flip',
 		});
 
 	</script>
