--- a/demo/picture/index.html
+++ b/demo/picture/index.html
@@ -106,7 +106,7 @@
 		    dom: document.getElementById("iSlider-wrapper"),
 		    isLooping: true,
 		    isOverspread: true,
-		    animateType: 'flip',
+		    animateType: 'rotate',
 		});
 
 	</script>
