--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,8 @@
 
 		<!-- Wrapper -->
 		<div id="iSlider-outer" class="iSlider-outer-pc">
-			<div id="iSlider-hidden" style="position:relative;overflow:hidden;height:100%;width:366px;">
-				<div id="iSlider-option">
+			<div id="iSlider-hidden">
+				<div id="iSlider-option" class="iSlider-option-pc">
 				<ul>
 					<li>isLooping: false</li>
 					<li>isVertical: false</li>
@@ -40,7 +40,7 @@
 				</ul>
 			</div>
 				<div id="iSlider-canvas" class="iSlider-canvas-pc">
-					<div id="iSlider-nav">
+					<div id="iSlider-nav" class="iSlider-nav-pc">
 						<div id="option-menu" class="icon-menu"></div>
 						<a>Index: 0</a>
 					</div>
