--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
 					<li>isLooping: false</li>
 					<li>isVertical: false</li>
 					<li>isAutoplay: false</span>
+					<li>isOverspread: false</span>
 					<li>changeOrientation: 90</li>
 				<li>
 					animationType:
