--- a/demo/index.html
+++ b/demo/index.html
@@ -45,6 +45,14 @@
 						<div id="option-menu" class="icon-menu"></div>
 						<a>Index: 0</a>
 					</div>
+					<div id="iSlider-dom-nav">
+						<a>Home</a>
+						<a>Page1</a>
+						<a>Page2</a>
+						<a>Page3</a>
+						<a>Page4</a>
+						<a>Page5</a>
+					</div>
 					<div id="iSlider-show" class="iSlider-show-pc"> 
 					</div>
 				</div>
