--- a/demo/index.html
+++ b/demo/index.html
@@ -47,11 +47,10 @@
 					</div>
 					<div id="iSlider-dom-nav">
 						<a>Home</a>
-						<a>Page1</a>
-						<a>Page2</a>
-						<a>Page3</a>
-						<a>Page4</a>
-						<a>Page5</a>
+						<a>Mail</a>
+						<a>News</a>
+						<a>TV</a>
+						<a>Game</a>
 					</div>
 					<div id="iSlider-show" class="iSlider-show-pc"> 
 					</div>
