change _slide to slideTo && fix cssText bug

--- a/demo/dom/index.html
+++ b/demo/dom/index.html
@@ -141,7 +141,7 @@
 			tabs[i].id = i;
 			tabs[i].addEventListener('click', function(e){
 				var idx = parseInt(e.target.id);
-				islider.goto(idx);
+				islider.slideTo(idx);
 			}, false);
 		}
 	</script>
